# mini-engine

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: AttributeMemory.cpp  AttributeMemory.h  Debugging.cpp  Debugging.h  Program.cpp  Program.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  vbo.cpp  vbo.h
core/src/shaders/: simple.vert
engine/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
